--- a/src/layouts/stories.hbs
+++ b/src/layouts/stories.hbs
@@ -7,6 +7,7 @@
    <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 <body>
+  <script src="/assets/js/bundle.js"></script>
   <header>
     <p>
       <a href="/">Home</a>
